fix: fix word break and white space wrap

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 216 20% 95.1%;
@@ -25,7 +25,7 @@
     --ring: 240 10% 3.9%;
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 240 10% 5%;
     --foreground: 0 0% 98%;
@@ -48,12 +48,14 @@
     --ring: 240 4.9% 83.9%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
+    white-space: pre-wrap;
+    word-wrap: break-word;
   }
 }
